@@ -1,9 +1,14 @@
+Feb 19, 2017: libarchive 3.3.0 released
+    Security & Feature release
+
 Jan 29, 2017: Limited NFSv4 ACL support for Mac OS (Darwin)
 
 Jan 10, 2017: POSIX.1e and NFSv4 ACL support for Solaris and derivates
 
 Dec 27, 2016: NFSv4 ACL read and write support for pax
     Deprecated functions: archive_entry_acl_text(), archive_entry_acl_text_w()
+
+Nov, 2016: libarchive is now being tested by the OSS-Fuzz project
 
 Oct 26, 2016: Remove liblzmadec support
 
